Bug 103705 - [BAT] igt@gem_workarounds@basic-read - Failed assertion: workaround_fail_count(fd, ctx) == 0
Summary: [BAT] igt@gem_workarounds@basic-read - Failed assertion: workaround_fail_coun...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-13 08:59 UTC by Marta Löfstedt
Modified: 2017-11-15 08:11 UTC (History)
1 user (show)

See Also:
i915 platform: CNL
i915 features:


Attachments

Description Marta Löfstedt 2017-11-13 08:59:25 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3333/fi-cnl-y/igt@gem_workarounds@basic-read.html

(gem_workarounds:3688) WARNING: 0x094D4	0x00800080	0x00000080	0x00000000	FAIL
(gem_workarounds:3688) CRITICAL: Test assertion failure function check_workarounds, file gem_workarounds.c:188:
(gem_workarounds:3688) CRITICAL: Failed assertion: workaround_fail_count(fd, ctx) == 0
(gem_workarounds:3688) CRITICAL: error: 1 != 0
Subtest basic-read failed.
Comment 1 Chris Wilson 2017-11-14 15:34:59 UTC
commit 34991bd48c927712678d0cea77628328f9046923
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Nov 11 10:03:36 2017 +0000

    drm/i915: Unify SLICE_UNIT_LEVEL_CLKGATE w/a for cnl
    
    gem_workarounds reports that the SLICE_UNIT_LEVEL_CLKGATE write isn't
    sticking. Commit 0a60797a0efb ("drm/i915: Implement
    ReadHitWriteOnlyDisable.") presumes that SLICE_UNIT_LEVEL_CLKGATE is a
    masked register in the context image, but commit 90007bca6162
    ("drm/i915/cnl: Introduce initial Cannonlake Workarounds.") lists it as
    an ordering unmasked register. The masked write will be losing the
    default settings if we trust the original commit. That gem_workarounds
    reports the value is lost entirely is more worrying though -- but it
    clearly suggests that it is not a masked register in the context image,
    so unify both w/a to use the original rmw.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=103705
    Fixes: 0a60797a0efb ("drm/i915: Implement ReadHitWriteOnlyDisable.")
    References: 90007bca6162 ("drm/i915/cnl: Introduce initial Cannonlake Workarounds.")
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Rafael Antognolli <rafael.antognolli@intel.com>
    Cc: Rodrigo Vivi <rodrigo.vivi@intel.com>
    Cc: Oscar Mateo <oscar.mateo@intel.com>
    Cc: Mika Kuoppala <mika.kuoppala@intel.com>
    Cc: Jani Nikula <jani.nikula@linux.intel.com>
    Cc: Joonas Lahtinen <joonas.lahtinen@linux.intel.com>
    Link: https://patchwork.freedesktop.org/patch/msgid/20171111100336.11020-1-chris@chris-wilson.co.uk
    Reviewed-by: Rafael Antognolli <rafael.antognolli@intel.com>
Comment 2 Marta Löfstedt 2017-11-15 08:11:35 UTC
Patch integrated in CI_DRM_3345, the test is no longer failing, thanks Chris!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.